pulling in l10n for 50MM -- baseline in case @font-face barfs

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -1,5 +1,6 @@
 ---
 af:
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Skakel"
   site search:                                  "YouVersion Soek"
   auth error:                                   "Jammer, daar was 'n probleem met jou gebruikersnaam of wagwoord. Teken asseblief in op YouVersion om aan te gaan."
@@ -352,6 +353,9 @@ af:
       confirm password:                         "Bevestig Wagwoord"
       avatar file:                              "Kies 'n lêer vir jou foto"
       avatar help:                              "Fotos word aanvaar in in JPG, PNG, of GIF formaat. Jou foto sal aangepas word tot 'n voorskou foto van 48x48 pixels. Die maksimum lêer grote is 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Suskses!  Jou foto is verander."
       updated notifications:                    "Suskes! Jou kennisgewing opsies is aangepas."
       notification errors:                      "Die volgende fout(e) het opdatering van kennisgewings verhoed:"
@@ -373,6 +377,7 @@ af:
     edit:                                       "Verander"
     delete:                                     "Vee hierdie Boekmerk uit"
     title field:                                "Titel"
+    title field field:                          "Titel:"
     labels:                                     "Etikette"
     all:                                        "Alle"
     labels label:                               "Etikette:"
@@ -385,6 +390,12 @@ af:
     save:                                       "Stoor Boekmerk"
     confirm delete:                             "Ja, ek is seker"
     loading:                                    "Besig om jou boekmerke te laai..."
+    edit bookmark:                              "Edit Bookmark"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Verander"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Kenteken Verwerf"
     user badges:                                "%{user} se Kentekens"
@@ -542,9 +553,7 @@ af:
     youversion copy:                            "Sedert sy stigting in 1996, was dit LifeChurch.tv se doel om mense te lei om ten volle gewyde volgelinge van Christus te word. Deur dit te doen, het ons gekyk na nuwe maniere om mense te help die Bybel te verbind aan hul daaglikse lewe. Ons metodes het oor die jare verander soos ons verskillende tegnieke en strategieë ingelyf het. Maar aan die kern, bly ons fokus op die relevansie as ons voortdurend daarna streef om aan te toon en die mense te leer hoe God se Woord toepaslik is vir almal, maak nie saak waar hulle is in die lewe."
     youversion copy 2:                          "YouVersion verteenwoordig 'n nuwe grens in LifeChurch.tv se pogings. Ons bou nie net 'n instrument om 'n impak te maak in die wêreld deur gebruik te maak van innoverende tegnologie, meer belangrik, ons is besig om mense te betrek in 'n verhouding met God as hulle die toepaslikheid van die Bybel het vir hul lewens ontdek."
     partners title:                             "'n Spesiale Woord Van Dank Vir Ons Venote"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Ons Vertalings Spanne"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Media Area"
     contact header:                             "Media Kontak Inligting"
@@ -554,9 +563,12 @@ af:
     blog:                                       "YouVersion Blog"
     facebook:                                   "YouVersion op Facebook"
     twitter:                                    "YouVersion op Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Gebasseer op die aanlyn Bybel, YouVersion.com, is die Bybel App 'n gratis mobiele Bybel wat op byna enige selfoon geïnstalleer kan word. Die Bybel App laat  gebruikers toe om die Bybel te lees, om verse met hul sosiale netwerke te deel, om hul gunsteling gedeeltes te boekmerk, en meer; alles in 'n ​​formaat wat tred hou met hul toenemende mobiele leefstyl."
     resources title:                            "Media Hulpbronne"
+    now title:                                  "do not translate"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Oor YouVersion en The Bible App"
       history:                                  "YouVersion Geskiedenis en Statistieke"
       manual:                                   "YouVersion Produk Handleiding"
@@ -569,6 +581,8 @@ af:
       ipad:                                     "Prentjie Versameling: iPad"
       android:                                  "Prentjie Versameling: Android"
       blackberry:                               "Prentjie Versameling: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Prentjie Versameling: Lifestyle"
       screencast:                               "YouVersion Skerm-opname"
     links title:                                "Mediadekking Skakels"
