--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,6 @@
 ---
 de:
+  celebrating 50MM:                             "Zur Feier der 50 Mio. Downloads!"
   link:                                         "Link"
   site search:                                  "YouVersion-Suche"
   auth error:                                   "Entschuldigung, es gab ein Problem mit Benutzername oder Passwort. Bitte melde dich bei YouVersion an um fortzufahren."
@@ -352,6 +353,9 @@ de:
       confirm password:                         "Passwort bestätigen"
       avatar file:                              "Wähle eine Datei für dein Bild aus."
       avatar help:                              "Folgende Bildformate sind möglich: JPG, PNG oder GIF. Dein Bild wird in ein 48x48 Miniaturbild umgewandelt. Die maximale Dateigröße beträgt 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Du hast dein Bild erfolgreich aktualisiert."
       updated notifications:                    "Du hast deine Benachrichtigungseinstellungen erfolgreich aktualisiert."
       notification errors:                      "Der folgende Fehler hat die Änderung deiner Benachrichtigungen verhindert:"
@@ -373,6 +377,7 @@ de:
     edit:                                       "Bearbeiten"
     delete:                                     "Dieses Lesezeichen löschen"
     title field:                                "Titel"
+    title field field:                          "Titel:"
     labels:                                     "Etiketten"
     all:                                        "Alle"
     labels label:                               "Etiketten:"
@@ -385,6 +390,12 @@ de:
     save:                                       "Lesezeichen speichern"
     confirm delete:                             "Ja, ich bin sicher."
     loading:                                    "Deine Lesezeichen werden geladen..."
+    edit bookmark:                              "Lesezeichen bearbeiten"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Aktualisieren"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Abzeichen verdient"
     user badges:                                "Abzeichen von %{user}"
@@ -542,9 +553,7 @@ de:
     youversion copy:                            "Seit seinem Start 1996 war es das Ziel von LifeChurch.tv, Menschen zu einer hingebungsvollen Nachfolge Christi zu führen. Unter diesem Aspekt haben wir nach neuen Wegen Ausschau gehalten, Menschen zu helfen die Bibel in ihr tägliches Leben einzubinden. Unsere Methoden haben sich im Laufe der Jahre verändert, weil wir verschiedene Technologien und Strategien einbezogen haben. Aber im Kern bleibt unser Fokus darauf, dass wir fortgesetzt danach streben, den Menschen zu zeigen, wie Gottes Wort für jeden Bedeutung hat, egal wo er sich in seinem Leben befindet."
     youversion copy 2:                          "YouVersion ist ein neuer Schritt bei den Anstrengungen von LifeChurch.tv. Indem wir neue Technologie benutzen, haben wir kein Werkzeug geschaffen, um die Welt zu beeinflussen, vielmehr laden wir Menschen zu einer Beziehung zu Gott ein, indem sie die Bedeutung der Bibel für ihr Leben erkennen."
     partners title:                             "Ein besonderes Dankeschön an unsere Partner"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Unsere Übersetzerteams"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Presseecke"
     contact header:                             "Kontaktinformation Presse"
@@ -554,9 +563,12 @@ de:
     blog:                                       "YouVersion-Blog"
     facebook:                                   "YouVersion auf Facebook"
     twitter:                                    "YouVersion auf Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Basierend auf der Online Bibel, ist die YouVersion.com eine kostenlose Bibel App, die auf fast jedem Smartphone installiert werden kann. Die Bibel App ermöglicht es den Nutzern, die Bibel zu lesen, Verse mit ihren sozialen Netzwerken auszutauschen, ihre liebsten Passagen mit Lesezeichen zu versehen und vieles mehr&mdash; alles in einem Format, das zu ihrem zunehmend mobilen Lebensstil passt."
     resources title:                            "Presseinformationen"
+    now title:                                  "Heute in der YouVersion-Gemeinschaft"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Über YouVersion und die Bibel App"
       history:                                  "YouVersion-Geschichte und Statistiken"
       manual:                                   "YouVersion Markenzeichen Handbuch"
@@ -569,6 +581,8 @@ de:
       ipad:                                     "Bildauswahl: iPad"
       android:                                  "Bildauswahl: Android"
       blackberry:                               "Bildauswahl: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Bildauswahl: Lifestyle"
       screencast:                               "YouVersion-Screencast"
     links title:                                "Links zur Medienberichterstattung"
