--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 ---
 en:
-  celebrating 50MM:                             "Celebrating 50 Million Installs!"
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Link"
   site search:                                  "YouVersion Search"
   auth error:                                   "Sorry, there was a problem with your username or password. Please sign in to YouVersion to continue."
