--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,5 +1,6 @@
 ---
 ja:
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "リンク"
   site search:                                  "YouVersion内の検索"
   auth error:                                   "申し訳ありませんが、ユーザ名またはパスワードが間違っているようです。続けるにはYouVersionにサインインしてください。"
@@ -352,6 +353,9 @@ ja:
       confirm password:                         "新しいパスワードの再入力"
       avatar file:                              "使用する写真のファイルを選んで下さい"
       avatar help:                              "JPG、PNG、GIF形式のファイルをご利用いただけます。画像は48x48 サイズのサムネイルへ変換されます。ファイルサイズは1MBまでご利用可能です。"
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "写真の更新に成功しました！"
       updated notifications:                    "通知設定の更新に成功しました！"
       notification errors:                      "以下のエラーにより通知設定の更新ができません:"
@@ -373,6 +377,7 @@ ja:
     edit:                                       "編集"
     delete:                                     "このブックマークを削除する"
     title field:                                "タイトル"
+    title field field:                          "タイトル:"
     labels:                                     "ラベル"
     all:                                        " ブックマーク一覧"
     labels label:                               "ラベル:"
@@ -385,6 +390,12 @@ ja:
     save:                                       "ブックマークを保存"
     confirm delete:                             "間違いありません"
     loading:                                    "ブックマークを読み込み中..."
+    edit bookmark:                              "ブックマークを編集"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "アップデート"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "獲得したバッジ"
     user badges:                                "%{user} さんのバッジ"
@@ -424,7 +435,7 @@ ja:
     previous day:                               "前日"
     next day:                                   "次の日"
     reading completed _ mark and show next:     "次: %{next_reference}"
-    which reading:                              "%{total} 中の %{current}"
+    which reading:                              "%{total} 箇所中の%{current} 箇所"
     done reading:                               "完了"
     no content:                                 "ご利用中のプランには、この日に割り当てられた箇所がないので完了済となっています。"
     read today:                                 "今日の読書箇所を見る"
@@ -542,9 +553,7 @@ ja:
     youversion copy:                            "1996年の開始以来、LifeChurch.tvで は、人びとが献身的にキリストに従う者となるよう導くことを目標としています。その中で、私たちは聖書と人びとの日常生活を結びつける新たな方法を探し続けています。その方法も、様々な技術や戦略を取り入れることで、過去何年にも渡って変化を遂げてきました。それでも中核は聖書との関係への焦点であることに変りはなく、人びとが人生のどのような状況にあっても、神様の御言葉は一人ひとりと関係があるということを示し、教えることに努めています。"
     youversion copy 2:                          "YouVersion は、LifeChurch.tv の新しい試みの代表的なものです。私たちは、単に革新的な技術の利用の面でインパクトを与えるツールを作るだけではなく、より重要なことは、人々が聖書と人生の適合性を発見することによって、神様との関係を築く機会を提供しているのです。"
     partners title:                             "私たちのパートナーへの謝辞"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "翻訳チーム"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "プレスエリア"
     contact header:                             "プレス用の連絡先"
@@ -554,9 +563,12 @@ ja:
     blog:                                       "YouVersion ブログ"
     facebook:                                   "YouVersionのFacebookページ"
     twitter:                                    "YouVersionのTwitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "YouVersion.com のオンライン聖書を基盤とする聖書アプリは、ほぼ全機種の携帯電話に対応するダウンロード可能な無料の聖書です。聖書アプリでは、聖書を読んだり、ソーシャル・ネットワークで聖句をシェアしたり、好きな聖句にブックマークしたりすることができます。更に、それらの機能は、進化し続けるモバイル・ライフスタイルに常に最適な形態をとっていきます。"
     resources title:                            "プレス向け情報"
+    now title:                                  "do not translate"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "YouVersion と聖書アプリについて"
       history:                                  "YouVersion の歴史と統計"
       manual:                                   "YouVersion ブランドマニュアル"
@@ -569,6 +581,8 @@ ja:
       ipad:                                     "画像集: iPad"
       android:                                  "画像集: Android"
       blackberry:                               "画像集: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "画像集: ライフスタイル"
       screencast:                               "YouVersion 動画ガイド"
     links title:                                "マスコミ報道へのリンク"
