--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -1,5 +1,6 @@
 ---
 nl:
+  celebrating 50MM:                             "50 miljoen installatie viering!"
   link:                                         "Link"
   site search:                                  "YouVersion Zoekmachine"
   auth error:                                   "Sorry, er is een probleem ontstaan met je gebruikersnaam of wachtwoord. Graag inloggen bij YouVersion om door te gaan."
@@ -352,6 +353,9 @@ nl:
       confirm password:                         "Bevestig Wachtwoord"
       avatar file:                              "Selecteer een bestand voor je foto"
       avatar help:                              "Foto's kunnen in JPG-, PNG-of GIF-formaat zijn. Je foto wordt omgezet in een 48x48 miniatuur. De maximale bestandsgrootte is 1 MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Gelukt! Je hebt je foto bijgewerkt."
       updated notifications:                    "Succes! Je hebt je meldingsinstellingen bijgewerkt."
       notification errors:                      "De volgende fout(en) voorkomen dat je jouw notificaties can updaten:"
@@ -373,6 +377,7 @@ nl:
     edit:                                       "Bewerk"
     delete:                                     "Verwijder deze Bookmark"
     title field:                                "Titel"
+    title field field:                          "Titel:"
     labels:                                     "Labels"
     all:                                        "Alle"
     labels label:                               "Labels:"
@@ -385,6 +390,12 @@ nl:
     save:                                       "Bladwijzer Opslaan"
     confirm delete:                             "Ja, ik weet het zeker."
     loading:                                    "Laden van uw bladwijzers ..."
+    edit bookmark:                              "Bladwijzers Aanpassen"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Update"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Eerbetoon Verdiend"
     user badges:                                "%{user}'s Eerbetoon"
@@ -542,9 +553,7 @@ nl:
     youversion copy:                            "Sinds het begin in 1996, is het doel van LifeChurch.tv om mensen te leiden om volledig toegewijde navolgers van Christus te worden. Daarbij hebben wij naar nieuwe middelen gezocht om mensen te helpen een verbanden te leggen tussen de Bijbel en hun dagelijks leven. Onze methodes zijn veranderd in de loop der jaren, omdat wij verschillende technologieën en strategieën hebben ontwikkeld. Maar aan de basis blijft onze focus gericht op relevantie, terwijl we er voortdurend naar streven om mensen te tonen en te leren hoe Gods Woord betrekking heeft op iedereen, ongeacht waar ze staan in het leven."
     youversion copy 2:                          "YouVersion vormt een nieuwe grens in the streven van LifeChurch.tv. Wij zijn niet alleen maar een stuk gereedschap aan het bouwen om de wereld te beinvloeden met behulp van innovatieve technologie; maar nog belangrijker is het dat wij mensen met God verbinden, opdat zij de relevantie ontdekken die de Bijbel heeft voor hun leven."
     partners title:                             "Een speciale dank aan onze Partners"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Onze Vertaalteams"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Pers Area"
     contact header:                             "Pers contactinformatie"
@@ -554,9 +563,12 @@ nl:
     blog:                                       "YouVersion Blog"
     facebook:                                   "YouVersion op Facebook"
     twitter:                                    "YouVersion op Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Gebaseerd op de online Bijbel, YouVersion.com, de Bijbel App is een gratis mobiele Bijbel die op bijna alle toestellen kan worden geinstalleerd. De Bijbel App stelt gebruikers in staat om de Bijbel te lezen, verzen te delen op de sociale netwerken, bladwijzers te plaatsen bij favoriete passages, en meer&mdash; allemaal in een format die past bij de toenemend mobiele levenstijl."
     resources title:                            "Pers Bronnen"
+    now title:                                  "Vandaag in de YouVersion Gemeenschap"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Over YouVersion en de Bijbel App"
       history:                                  "YouVersion Geschiedenis en Statistieken"
       manual:                                   "YouVersion Merk Handboek"
@@ -569,6 +581,8 @@ nl:
       ipad:                                     "Afbeelding Collectie: iPad"
       android:                                  "Afbeelding Collectie: Android"
       blackberry:                               "Afbeelding Collectie: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Afbeelding Collectie: Levensstijl"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Verslagen Links"
