--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -1,5 +1,6 @@
 ---
 'no':
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Lenke"
   site search:                                  "YouVersion-søk"
   auth error:                                   "Det oppstod et problem med ditt brukernavn eller passord. Logg inn på YouVersion for å fortsette."
@@ -172,8 +173,8 @@
     invalid chapter title:                      "Om denne versjonen"
     invalid chapter text:                       "Dette kapitlet eksisterer ikke i denne oversettelesn."
     invalid secondary chapter text:             "Dette kapittelet finnes ikke i din foretrukne sekundære oversettelse."
-    no secondary version title:                 "About Parallel Comparison"
-    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
+    no secondary version title:                 "Om parallell sammenlikning"
+    no secondary version text:                  "%{language_name} har bare en tilgjengelig bibeloversettelse, så vi kunne ikke finne en annen utgave for deg. Vennligst velg hvilken annen oversettelse du ønsker å sammenligne med."
     select another chapter:                     "Velg et annet kapittel"
     view in reader:                             "Vis %{reference} i lesemodus"
   users:
@@ -236,10 +237,10 @@
     confirm update email success:               "Takk! Vi har oppdatert epost-adressen din."
     confirm update email error:                 "Beklager, det oppsto et problem og epost-adressen din ble ikke endret."
     account confirmed:                          "Your account has been confirmed!"
-    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
-    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
-    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
-    confirm password to continue:               "Please enter your password to sign in and get started."
+    account already confirmed:                  "Din konto er allerede bekreftet! Logg in for å fortsette"
+    errors confirming account:                  "Beklager, noe gikk galt på din side. Du kan oppdatere nettleseren din for å prøve igjen, eller om dette skjer mange ganger, kan du klikke nedenfor for å be om en ny bekreftelses-epost."
+    invalid confirm hash:                       "Beklager, den bekreftelseskoden ser ut til å være ugyldig. Du kan oppdatere nettleseren din for å prøve igjen, eller dersom dette skjer mange ganger, kan du klikke nedenfor for å be om en ny bekreftelseskode."
+    confirm password to continue:               "Skriv inn passordet ditt for å logge inn og komme i gang"
     invalid email forgot:                       "Beklager, men vi kunne ikke finne noen konto med den epost-adressen. Vennligst prøv igjen."
     error deleting account:                     "Beklager, det var en feil i vår ende. Vennligst prøv igjen eller kontakt support."
     send new password button:                   "Send nytt passord"
@@ -352,6 +353,9 @@
       confirm password:                         "Bekreft passord"
       avatar file:                              "Velg fil for bilde"
       avatar help:                              "Bilder kan være i JPG, PNG eller GIF. Bildet ditt vil bli konvertert til et 48x48 miniatyrbilde. Maksimum filstørrelse er 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Bildet ditt er oppdatert."
       updated notifications:                    "Varslingsinnstillinger er oppdatert."
       notification errors:                      "Følgende feil forhindret oppdatering av varslinger:"
@@ -373,6 +377,7 @@
     edit:                                       "Rediger"
     delete:                                     "Slett dette bokmerket"
     title field:                                "Tittel"
+    title field field:                          "Tittel:"
     labels:                                     "Merkelapper"
     all:                                        "Alle"
     labels label:                               "Emner:"
@@ -385,6 +390,12 @@
     save:                                       "Lagre bokmerke"
     confirm delete:                             "Ja, jeg er sikker"
     loading:                                    "Loading your bookmarks..."
+    edit bookmark:                              "Rediger bokmerke"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Oppdater"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Fått et merke"
     user badges:                                "%{user}s merker"
@@ -524,10 +535,10 @@
     donate now button:                          "Gi nå"
     email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
     email footer:                               "Your donation will help people around the world fall in love with God's Word."
-    address:                                    "Address"
-    city:                                       "City"
-    state:                                      "State"
-    zip:                                        "Zip"
+    address:                                    "Adresse"
+    city:                                       "By"
+    state:                                      "Stat"
+    zip:                                        "Postnummer"
   download ad:
     title:                                      "Last ned gratis Bibel-app."
     line 1:                                     "Hundrevis av oversettelser på mange"
@@ -542,9 +553,7 @@
     youversion copy:                            "Siden det hele startet i 1996 har LifeChurch.tv's mål vært å lede folk til å bli trofaste etterfølgere av Jesus. I arbeidet med dette har vi sett etter nye måter å hjelpe folk til å koble Bibelen til hverdagslivet sitt. Metodene har forandret seg gjennom årene, og vi har tatt i bruk ny teknologi og nye strategier. Uansett teknologi, hovedfokuset er å være relevant, og vi jobber hele tiden for å vise og lære mennesker at Guds Ord er vikitg for alle, uansett hvor de befinner seg i livet."
     youversion copy 2:                          "YouVersion representerer en ny frontlinje i Lifechurch.tv's arbeid. Vi bygger ikke et verktøy bare for å forandre verden med nyskapende teknologi. Enda viktigere er det å gi mennesker muligheter til å bli kjent med Gud og oppdage hvor relevant Bibelen er for livene deres."
     partners title:                             "En spesiell takk til våre partnere"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Våre team med oversettere"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Presseområde"
     contact header:                             "Informasjon om pressekontakter"
@@ -554,9 +563,12 @@
     blog:                                       "YouVersions blogg"
     facebook:                                   "YouVersion på Facebook"
     twitter:                                    "YouVersion på Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Bibel-appen er en gratis mobil-bibel basert på onlinebibelen på YouVersion.com, som kan installeres på mange mobiltelefoner. Bibel-appen gir brukerne mulighet til å lese Bibelen, dele vers gjennom sosiale nettverk, bokmerke favorittavsnitt, med mer&mdash; alt i et format som følger utviklingen i deres stadig voksende mobile livsstil."
     resources title:                            "Ressurser for presse"
+    now title:                                  "do not translate"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Om YouVersion og Bibel-appen"
       history:                                  "Historien til YouVersion og statistikk"
       manual:                                   "YouVersions varemerke-manual"
@@ -569,6 +581,8 @@
       ipad:                                     "Bildesamling: iPad"
       android:                                  "Bildesamling: Android"
       blackberry:                               "Bildesamling: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Bildesamling: Lifestyle"
       screencast:                               "YouVersion screencast"
     links title:                                "Linker for mediedekning"
