--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,5 +1,6 @@
 ---
 pt-BR:
+  celebrating 50MM:                             "Comemorando 50 milhões de instalações!"
   link:                                         "Link"
   site search:                                  "Busca no YouVersion"
   auth error:                                   "Desculpe, houve um problema com o seu nome de usuário ou senha. Por favor, faça o login no YouVersion para prosseguir."
@@ -353,6 +354,9 @@ pt-BR:
       confirm password:                         "Confirme a Senha"
       avatar file:                              "Selecione um arquivo para sua foto"
       avatar help:                              "As imagens podem ser no formato JPG, PNG ou GIF. Sua imagem será convertida para uma miniatura de 48x48. O tamanho máximo do arquivo é de 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Sucesso! Você atualizou sua foto."
       updated notifications:                    "Sucesso! Você atualizou suas configurações de notificação."
       notification errors:                      "O(s) seguinte(s) erro(s) impediu(ram) a atualização das suas notificações:"
@@ -374,6 +378,7 @@ pt-BR:
     edit:                                       "Editar"
     delete:                                     "Apagar este Marcador"
     title field:                                "Título"
+    title field field:                          "Título:"
     labels:                                     "Etiquetas"
     all:                                        "Tudo"
     labels label:                               "Etiquetas:"
@@ -386,6 +391,12 @@ pt-BR:
     save:                                       "Salvar Marcador"
     confirm delete:                             "Sim, tenho certeza"
     loading:                                    "Carregando seus marcadores..."
+    edit bookmark:                              "Editar Favorito"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Atualizar"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Ganhou uma Medalha"
     user badges:                                "Medalhas de %{user}"
@@ -543,9 +554,7 @@ pt-BR:
     youversion copy:                            "Desde seu início em 1996, a missão da LifeChruch.tv tem sido levar pessoas a serem seguidores totalmente devotos de Cristo. Fazendo isso, nós procuramos novas formas de ajudar as pessoas a se conectar com a Bíblia no seu dia-a-dia. Nossos métodos tem mudado com o passar dos anos com a incorporação de várias tecnologias e estratégias. Mas, no fundo, nosso foco continua relevante se nos esforçarmos constantemente para demonstrar e ensinar as pessoas sobre como a Palavra de Deus diz respeito a todos, não importa onde eles estejam."
     youversion copy 2:                          "O YouVersion representa uma nova fronteira nos esforços da LifeChurch.tv. Não estamos apenas construindo uma ferramenta para impactar o mundo usando uma tecnologia inovadora, mas mais importante, estamos trazendo as pessoas a um relacionamento com Deus na medida em que elas descobrem a importância da Bíblia nas suas vidas."
     partners title:                             "Um Agradecimento Especial aos Nossos Parceiros"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Nossas Equipes de Tradução"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Área de Imprensa"
     contact header:                             "Informações de Contato de Imprensa"
@@ -555,9 +564,12 @@ pt-BR:
     blog:                                       "Blog do YouVersion"
     facebook:                                   "YouVersion no Facebook"
     twitter:                                    "YouVersion no Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Baseado na Bíblia online, YouVersion.com, a Aplicativo da Bíblia é uma Bíblia gratuita para celular que pode ser instalada em quase todos os aparelhos. O Aplicativo da Bíblia permite aos usuários lerem a Bíblia, compartilhar versículos em suas redes sociais, marcar suas passagens favoritas, e mais&mdash;tudo em um formato que acompanha seus estilos de vida cada vez mais portáteis."
     resources title:                            "Recursos de Imprensa"
+    now title:                                  "Hoje na Comunidade YouVersion"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Sobre o YouVersion e o App da Bíblia"
       history:                                  "História e Estatísticas do YouVersion"
       manual:                                   "Manual da Marca YouVersion"
@@ -570,6 +582,8 @@ pt-BR:
       ipad:                                     "Coleção de Imagens: iPad"
       android:                                  "Coleção de Imagens: Android"
       blackberry:                               "Coleção de Imagens: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Coleção de Imagens: Lifestyle"
       screencast:                               "Tutorial do YouVersion"
     links title:                                "Links de Cobertura de Mídia"
