--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,6 @@
 ---
 ru:
+  celebrating 50MM:                             "Отмечаем 50 миллионов установок!"
   link:                                         "Ссылка"
   site search:                                  "Поиск YouVersion"
   auth error:                                   "Извините, с именем пользователя и паролем произошла ошибка. Пожалуйста, войдите в систему, чтобы продолжить."
@@ -352,6 +353,9 @@ ru:
       confirm password:                         "Подтвердить пароль"
       avatar file:                              "Выберить файл с фотографией"
       avatar help:                              "Фотографии могут быть в формате JPG, PNG или GIF. Ваша фотография будет конвертирована в миниатюру размером 48х48. Максимальный размер файла 1 Мб."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Фотография успешно обновлена."
       updated notifications:                    "Настройки уведомлений успешно обновлены."
       notification errors:                      "Следующая ошибка помешала обновлению настроек:"
@@ -373,6 +377,7 @@ ru:
     edit:                                       "Редактировать"
     delete:                                     "Удалить"
     title field:                                "Название"
+    title field field:                          "Название:"
     labels:                                     "Ярлыки"
     all:                                        "Все"
     labels label:                               "Ярлыки:"
@@ -385,6 +390,12 @@ ru:
     save:                                       "Сохранить закладку"
     confirm delete:                             "Да, удалить"
     loading:                                    "Загружаю закладки..."
+    edit bookmark:                              "Редактировать закладку"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Обновить"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Заработан значок"
     user badges:                                "Значки %{user}"
@@ -542,9 +553,7 @@ ru:
     youversion copy:                            "С момента создания LifeChurch.tv в 1996 году, нашей целью было направлять людей на путь верных последователей Христа. При этом мы искали новые пути, с помощью которых люди могли бы связать Библию со своей повседневной жизнью. Наши методы изменились за эти годы, поскольку мы внедрили различные технологии и стратегии. Но в своей основе, фокус остался на важности, и мы последовательно стремимся продемонстрировать и научить людей тому, как Слово Божие касается каждого, независимо от того, кем они являются в жизни."
     youversion copy 2:                          "YouVersion представляет новый рубеж в усилиях LifeChurch.tv. Мы не просто создаем инструмент для воздействия на мир, используя инновационные технологии, но, что более важно, мы приводим людей к Богу, поскольку они начинают осознавать актуальность Библии в своей жизни."
     partners title:                             "Выражаем особую благодарность нашим партнёрам"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Наши команды переводчиков"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Уголок прессы"
     contact header:                             "Контакты для прессы"
@@ -554,9 +563,12 @@ ru:
     blog:                                       "Блог YouVersion"
     facebook:                                   "YouVersion на Facebook"
     twitter:                                    "YouVersion в Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Основанное на онлайн Библии YouVersion.com, Приложение Библия является бесплатной мобильной Библией, которая может быть установлена ​​практически на любой телефон. Приложение Библия позволяет пользователям читать Библию, делиться стихами через социальные сети, добавлять в закладки любимые места и многое другое &mdash; и все это доступно в формате, идущем в ногу с всё более мобильным образом жизни современного человека."
     resources title:                            "Для для прессы"
+    now title:                                  "Сегодня в сообществе YouVersion"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "О YouVersion и Приложении Библия"
       history:                                  "История и статистика YouVersion"
       manual:                                   "Руководство по использованию бренда YouVersion"
@@ -569,6 +581,8 @@ ru:
       ipad:                                     "Колекция изображений: iPad"
       android:                                  "Колекция изображений: Android"
       blackberry:                               "Колекция изображений: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Колекция изображений: Стиль жизни"
       screencast:                               "Скринкаст YouVersion"
     links title:                                "Ссылки на трансляции в масс медиа"
