--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -1,5 +1,6 @@
 ---
 sk:
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Odkaz"
   site search:                                  "YouVersion vyhľadávanie"
   auth error:                                   "Prepáčte, vyskytol sa problém s vašim prihlasovacím menom a heslo. Pre pokračovanie sa prihláste na YouVersion."
@@ -352,6 +353,9 @@ sk:
       confirm password:                         "Potvrdiť heslo"
       avatar file:                              "Zvoľte súbor s vaším obrázkom"
       avatar help:                              "Obrázky môžu byť vo formáte JPG, PNG, alebo GIF. Váš obrázok bude upravený na rozlíšenie 48x48. Maximálna veľkosť súboru je 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Hotovo! Váš obrázok bol úspešne aktualizovaný."
       updated notifications:                    "Hotovo! Vaše nastavenia notifikácií boli úspešne aktualizované."
       notification errors:                      "Nasledujúce chyby zabránili aktualizácii vašich notifikácií:"
@@ -373,6 +377,7 @@ sk:
     edit:                                       "Upraviť"
     delete:                                     "Odstrániť túto záložku"
     title field:                                "Názov"
+    title field field:                          "Nadpis:"
     labels:                                     "Značky"
     all:                                        "Všetky"
     labels label:                               "Menovky:"
@@ -385,6 +390,12 @@ sk:
     save:                                       "Uložiť záložku"
     confirm delete:                             "Áno, naozaj"
     loading:                                    "Načítavajú sa vaše záložky..."
+    edit bookmark:                              "Upraviť záložku"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Aktalizovať"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Získaný odznak"
     user badges:                                "Odznaky používateľa %{user}"
@@ -542,9 +553,7 @@ sk:
     youversion copy:                            "Od svojho vzniku v roku 1996 bolo cieľom LifeChurch.tv viesť ľudí k tomu, aby sa stali oddanými nasledovníkmi Krista. Počas toho sme hľadali nové spôsoby, ako pomôcť ľuďom vniesť Bibliu do ich každodenného života. Naše metódy sa v priebehu rokov menili. Postupne sme skúšali rôzne stratégie a technológie, ale v hĺbke zostalo naše zameranie stále na význame Božieho Slova, ktorý sa ľuďom snažíme ukázať a naučiť ich, že sa týka každého, bez rozdielu kde sa v svojom živote nachádzajú."
     youversion copy 2:                          "YouVersion predstavuje novú oblasť v snahách LifeChurch.tv. Nevytvárame nástroj, vďaka ktorému by sme chceli použitím inovatívnych technológií získať vplyv. Predovšetkým sme ľudia zapálení pre vzťah s Bohom, ktorí objavujú dôležitosť Biblie na životy nás všetkých."
     partners title:                             "Špeciálne poďakovanie našim partnerom"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Naše tímy prekladateľov"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Tlačové informácie"
     contact header:                             "Kontaktné informácie pre tlač"
@@ -554,9 +563,12 @@ sk:
     blog:                                       "YouVersion blog"
     facebook:                                   "YouVersion na Facebooku"
     twitter:                                    "YouVersion na Twitteri"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Aplikácia Biblia, založená na online Biblii YouVersion.com je bezplatná aplikácia, ktorá sa dá nainštalovať do takmer ktoréhokoľvek telefónu. Aplikácia Biblia umožňuje používateľom čítať Bibliu, zdieľať verše na sociálne siete, pridať si obľúbené pasáže medzi záložky a o mnoho viac&mdash;všetko spôsobom, ktorý drží krok s narastajúcim mobilným životným štýlom."
     resources title:                            "Tlačové zdroje"
+    now title:                                  "Today in the YouVersion Community"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "O YouVersion a aplikácii Biblia"
       history:                                  "História a štatistiky YouVersion"
       manual:                                   "Brand manuál YouVersion"
@@ -569,6 +581,8 @@ sk:
       ipad:                                     "Zbierka obrázkov: iPad"
       android:                                  "Zbierka obrázkov: Android"
       blackberry:                               "Zbierka obrázkov: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Zbierka obrázkov: Zo života"
       screencast:                               "Ilustračné video YouVersion"
     links title:                                "Médiá o YouVersion"
