--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -1,5 +1,6 @@
 ---
 en-GB:
+  celebrating 50MM:                             "Celebrating 50 Million App Installs!"
   link:                                         "Link"
   site search:                                  "YouVersion Search"
   auth error:                                   "Sorry, there was a problem with your username or password. Please sign in to YouVersion to continue."
@@ -352,6 +353,9 @@ en-GB:
       confirm password:                         "Confirm Password"
       avatar file:                              "Select a file for your picture"
       avatar help:                              "Images can be in JPG, PNG, or GIF format. Your image will be converted to a 48x48 thumbnail. The maximum file size is 1MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Success! You've updated your picture."
       updated notifications:                    "Success! You've updated your notification settings."
       notification errors:                      "The following error(s) prevented updating your notifications:"
@@ -373,6 +377,7 @@ en-GB:
     edit:                                       "Edit"
     delete:                                     "Delete this Bookmark"
     title field:                                "Title"
+    title field field:                          "Title:"
     labels:                                     "Labels"
     all:                                        "All"
     labels label:                               "Labels:"
@@ -385,6 +390,12 @@ en-GB:
     save:                                       "Save Bookmark"
     confirm delete:                             "Yes, I'm sure"
     loading:                                    "Loading your bookmarks..."
+    edit bookmark:                              "Edit Bookmark"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Update"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Earnt a Badge"
     user badges:                                "%{user}'s Badges"
@@ -542,9 +553,7 @@ en-GB:
     youversion copy:                            "Since its start in 1996, LifeChurch.tv's purpose has been to lead people to become fully devoted followers of Christ. In doing so, we have looked for new ways to help people connect the Bible to their daily lives. Our methods have changed over the years as we've incorporated various technologies and strategies. But at the core, our focus remains on relevancy as we consistently strive to demonstrate and teach people how God's Word relates to everyone, no matter where they are in life."
     youversion copy 2:                          "YouVersion represents a new frontier in LifeChurch.tv's efforts. We aren't just building a tool to impact the world using innovative technology, more importantly, we are engaging people into relationships with God as they discover the relevance the Bible has for their lives."
     partners title:                             "A Special Thanks to Our Partners"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Our Translation Teams"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Press Area"
     contact header:                             "Press Contact Information"
@@ -554,9 +563,12 @@ en-GB:
     blog:                                       "YouVersion Blog"
     facebook:                                   "YouVersion on Facebook"
     twitter:                                    "YouVersion on Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Based on the online Bible, YouVersion.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more&mdash;all in a format that keeps up with their increasingly mobile lifestyle."
     resources title:                            "Press Resources"
+    now title:                                  "Today in the YouVersion Community"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "About YouVersion and The Bible App"
       history:                                  "YouVersion History and Stats"
       manual:                                   "YouVersion Brand Manual"
@@ -569,6 +581,8 @@ en-GB:
       ipad:                                     "Image Collection: iPad"
       android:                                  "Image Collection: Android"
       blackberry:                               "Image Collection: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Image Collection: Lifestyle"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Coverage Links"
