--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,6 @@
 ---
 es:
+  celebrating 50MM:                             "¡Celebrando 50 millones de instalaciones!"
   link:                                         "Enlace"
   site search:                                  "Búsqueda de YouVersion"
   auth error:                                   "Lo sentimos, hubo un problema con su nombre de usuario o contraseña. Por favor ingrese a YouVersion para continuar."
@@ -352,6 +353,9 @@ es:
       confirm password:                         "Confirmar Contraseña"
       avatar file:                              "Seleccione un archivo para su fotografía"
       avatar help:                              "Las imágenes pueden estar en formato JPG, PNG o GIF.  Su imagen será convertida a un tamaño de 48x48.  El tamaño máximo del archivo deberá de ser de 1Mb."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Usted ha actualizado su fotografia exitosamente!"
       updated notifications:                    "Usted ha actualizado la configuración de sus notificaciones exitosamente!"
       notification errors:                      "El ( los) siguiente (s) error (es) impidió la actualización de sus notificaciones:"
@@ -373,6 +377,7 @@ es:
     edit:                                       "Editar"
     delete:                                     "Eliminar este Marcador"
     title field:                                "Título"
+    title field field:                          "Título:"
     labels:                                     "Etiqueta"
     all:                                        "Todas"
     labels label:                               "Etiquetas:"
@@ -385,6 +390,12 @@ es:
     save:                                       "Guardar marcador"
     confirm delete:                             "Si, estoy seguro."
     loading:                                    "Cargando sus marcadores..."
+    edit bookmark:                              "Editar Marcador"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Actualizar"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Una insignia ganada"
     user badges:                                "Insignias de %{user}"
@@ -542,9 +553,7 @@ es:
     youversion copy:                            "Desde su inicio en 1996,el propósito de LifeChurch.tv ha sido el de guiar a las personas a convertirse totalmente en seguidores devotos de Cristo. De este modo, hemos encontrado nuevas formas de ayudar a la gente a que sus vidas diarias sean conectadas con la Biblia. Nuestra metodología ha cambiado con el curso de los años, hemos incorporado diversas tecnologías y estrategias. Pero en el fondo, nuestro objetivo de relevancia se mantiene, mientras nosotros nos esforzamos constantemente para demostrar y enseñar a las personas como la Palabra de Dios se identifica con todos, sin importar dónde se encuentren en la vida."
     youversion copy 2:                          "YouVersion representa una nueva frontera en los esfuerzos de LifeChurch.tv. No sólo estamos construyendo una herramienta para impactar al mundo utilizando una innovadora tecnología, sino aún más importante, estamos involucrando a la gente a  tener una relación con Dios a medida que descubren la importancia que la Biblia tiene para sus vidas."
     partners title:                             "Un Agradecimiento Especial a Nuestros Socios."
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "Nuestros Equipos de Traducción"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "Área de Prensa"
     contact header:                             "Información del Contacto de Medios de Comunicación"
@@ -554,9 +563,12 @@ es:
     blog:                                       "Blog de YouVersion"
     facebook:                                   "YouVersion en Facebook"
     twitter:                                    "YouVersion en Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Basado en la Biblia en línea, YouVersion.com, la Biblia App es una Biblia móvil gratuita, que se puede instalar en casi cualquier teléfono. La Bibila App le permite a los usuarios leer la Biblia, compartir versículos con sus redes sociales, marcar sus pasajes favoritos, y más, todo en un formato que se mantiene al día con su creciente estilo de vida móvil."
     resources title:                            "Recursos para los Medios de Comunicación"
+    now title:                                  "Hoy en la Comunidad de YouVersion"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Acerca de YouVersion y  la Biblia App"
       history:                                  "Historia y Estadísticas de YouVersion"
       manual:                                   "Manual de la Marca YouVersion"
@@ -569,6 +581,8 @@ es:
       ipad:                                     "Colección de imágenes: iPad"
       android:                                  "Colección de imágenes: Android"
       blackberry:                               "Colección de imágenes: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Colección de imágenes: Lifestyle"
       screencast:                               "Grabaciones de YouVersion"
     links title:                                "Enlaces de Cobertura Medios de Comunicación"
