--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1,5 +1,6 @@
 ---
 sv:
+  celebrating 50MM:                             "Fira 50 miljoner installationer!"
   link:                                         "Länk"
   site search:                                  "YouVersion-sök"
   auth error:                                   "Det var ett problem med ditt användarnamn eller lösenord. Logga in på YouVersion för att fortsätta."
@@ -352,6 +353,9 @@ sv:
       confirm password:                         "Bekräfta lösenord"
       avatar file:                              "Välj en fil för din bild"
       avatar help:                              "Bilder kan vara i JPG-, PNG- eller GIF-format. Din bild kommer att konverteras till en miniatyr på 48x48. Maximal filstorlek är 1 MB."
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "Du har uppdaterat din bild."
       updated notifications:                    "Du har uppdaterat dina meddelandeinställningar."
       notification errors:                      "Följande fel förhindrade dig att uppdatera dina meddelanden:"
@@ -373,6 +377,7 @@ sv:
     edit:                                       "Ändra"
     delete:                                     "Ta bort detta bokmärke"
     title field:                                "Titel"
+    title field field:                          "Titel:"
     labels:                                     "Etiketter"
     all:                                        "Alla"
     labels label:                               "Etiketter:"
@@ -385,6 +390,12 @@ sv:
     save:                                       "Spara bokmärke"
     confirm delete:                             "Ja, jag är säker."
     loading:                                    "Laddar dina bokmärken..."
+    edit bookmark:                              "Redigera bokmärke"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "Uppdatera"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "Fått ett emblem"
     user badges:                                "%{user}s emblem"
@@ -519,10 +530,10 @@ sv:
     card exp date:                              "Utgångsdatum (MMÅÅ)"
     receipt:                                    "E-posta mig en kopia av kvittot."
     preview:                                    "Förhandsgranska donation"
-    header copy:                                "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Vi samla in betalningsinformation på nästa sida."
+    header copy:                                "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Fyll i formuläret nedan för att göra din donation.  Vi samlar in betalningsinformation på nästa sida."
     header confirm copy:                        "Tillsammans kan vi bli den generation genom tiderna som är mest engagerade i Bibeln. Ert stöd innebär att människor kan öppna Guds Ord på fler plattformar, på fler språk, med fler översättningar, och i fler länder än någonsin tidigare. Klicka på Donera nu för att göra en donation."
     donate now button:                          "Donera nu"
-    email header:                               "YouVersion, en ministeriat för LifeChurch.tv har mottagit din donation. Inga varor eller tjänster lämnades i utbyte för donation förutom immateriella religiösa förmåner. Vänligen kontakta giving@lifechurch.tv med frågor."
+    email header:                               "YouVersion, en del av LifeChurch.tv har mottagit din donation. Inga varor eller tjänster lämnades i utbyte för donation förutom immateriella religiösa förmåner. Vänligen kontakta giving@lifechurch.tv med frågor."
     email footer:                               "Din gåva kommer att hjälpa människor runt om hela världen att förälska sig i Guds ord. "
     address:                                    "Adress"
     city:                                       "Stad"
@@ -542,9 +553,7 @@ sv:
     youversion copy:                            "Sedan starten 1996 har syftet för LifeChurch.tv varit att få folk att bli helt hängivna efterföljare till Kristus. För att göra det har vi letat efter nya sätt att hjälpa människor komma i kontakt med Bibeln i deras vardag. Våra metoder har förändrats med åren då vi använt olika tekniker och strategier. Men vårt kärnfokus förändras inte då vi ständigt strävar efter att visa och lära människor hur Guds Ord gäller alla, oavsett var de befinner sig i livet."
     youversion copy 2:                          "YouVersion representerar ett nytt område för LifeChurch.tv:s insatser. Vi bygger inte bara ett verktyg för att påverka världen med innovativ teknik. Framför allt engagerar vi människor i sina relationer med Gud efterhand som de upptäcker den relevans Bibeln har för deras liv."
     partners title:                             "Ett speciellt tack till våra partners"
-    partners text:                              "Utan våra generösa bibelpubliceringspartners skulle YouVersion inte har möjlighet att tillhandahålla vår världsomspännande gemenskap med så många Biblar. Många av er har frågat oss hur ni kan tacka dessa viktiga supporters till YouVersion. Du kan läsa mer om dem om deras ministerium, och ur du kan stödja dem via länken nedan."
     translation title:                          "Vårt översättningsteam"
-    learn more:                                 "Läs mer"
   press page:
     title:                                      "Pressområde"
     contact header:                             "Kontaktinformation för press"
@@ -554,9 +563,12 @@ sv:
     blog:                                       "YouVersion Blogg"
     facebook:                                   "YouVersion på Facebook"
     twitter:                                    "YouVersion på Twitter"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "Bibelappen, baserad på online-Bibeln YouVersion.com, är en gratis mobil-Bibel som kan installeras på nästan alla telefoner. Bibelappen låter användare läsa Bibeln, dela verser i sina sociala nätverk, bokmärka sina favoritpassager och mer&mdash;allt i ett format som håller jämna steg med den mobila livsstilen."
     resources title:                            "Pressinformation"
+    now title:                                  "Idag i YouVersion-gemenskapen"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "Om YouVersion och Bibelappen"
       history:                                  "YouVersions historia och statistik"
       manual:                                   "YouVersions varumärkesguide"
@@ -569,6 +581,8 @@ sv:
       ipad:                                     "Bildsamling: iPad"
       android:                                  "Bildsamling: Android"
       blackberry:                               "Bildsamling: BlackBerry"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "Bildsamling: Livsstil"
       screencast:                               "YouVersion-presentation"
     links title:                                "Länkar till media"
