--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,5 +1,6 @@
 ---
 zh-CN:
+  celebrating 50MM:                             "庆祝5000万次的安装！"
   link:                                         "链接"
   site search:                                  "YouVersion 搜索"
   auth error:                                   "抱歉，用户名或密码出错。请再试登录YouVersion。"
@@ -87,7 +88,7 @@ zh-CN:
   press:                                        "新闻"
   get support:                                  "服务支持"
   donate title:                                 "奉献"
-  choose language field:                        "选择您的语言:"
+  choose language field:                        "选择您的语言："
   settings:                                     "设置"
   profile:                                      "详细资料"
   sign out:                                     "退出"
@@ -165,15 +166,15 @@ zh-CN:
     selected:                                   "选中的"
     preferences:                                "偏好"
     listen:                                     "听"
-    parallel:                                   "平行"
+    parallel:                                   "平行阅读"
     full screen:                                "全屏"
     about the version:                          "关于  %{version}"
     settings:                                   "阅读器设置"
     invalid chapter title:                      "关于这个版本"
     invalid chapter text:                       "所选择的章节不在目前的圣经版本中。"
     invalid secondary chapter text:             "在您第二喜欢的圣经版本中，这个章节不存在。"
-    no secondary version title:                 "About Parallel Comparison"
-    no secondary version text:                  "%{language_name} only has one version available, so we couldn't pick a secondary version for you. Please select your secondary version for parallel comparison."
+    no secondary version title:                 "关于平行对照阅读"
+    no secondary version text:                  "%{language_name} 只有一个译本可用，所以不能为您提供该语言的第二种译本。请选择第二个译本进行平行对照阅读。"
     select another chapter:                     "选择另外的章节"
     view in reader:                             "在阅读版面查看%{reference}"
   users:
@@ -236,10 +237,10 @@ zh-CN:
     confirm update email success:               "谢谢！您已经成功更新了电邮地址。"
     confirm update email error:                 "很抱歉，无法更改您的电邮地址！"
     account confirmed:                          "您的帐户已经验证成功！"
-    account already confirmed:                  "Your account has already been confirmed! Sign in to continue."
-    errors confirming account:                  "Sorry, something went wrong on our end. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation email."
-    invalid confirm hash:                       "Sorry, that confirmation code seems to be invalid. You can refresh your browser to try again, or if this keeps happening, click below to request a new confirmation code."
-    confirm password to continue:               "Please enter your password to sign in and get started."
+    account already confirmed:                  "您的账户已经确认！请登录！"
+    errors confirming account:                  "很抱歉，我们这里出了点儿问题。您可以刷新浏览器重试或者点击下面要求重新发送确认邮件。"
+    invalid confirm hash:                       "很抱歉，这个确认代码无效。您可以刷新浏览器重试或者点击下面要求获取新的确认代码。"
+    confirm password to continue:               "请输入您的密码登录以便继续。"
     invalid email forgot:                       "抱歉，没有找到与该电子邮件地址关联的帐户。请再尝试。"
     error deleting account:                     "很抱歉，我们这里出了个问题，请重试或者联系我们的技术支持。"
     send new password button:                   "发送新密码"
@@ -346,12 +347,15 @@ zh-CN:
       timezone:                                 "时区"
       language:                                 "语言"
       updated:                                  "您已经成功地更新了您的个人资料。"
-      error:                                    "对不起，在更新您个人资料时出错。"
+      error:                                    "对不起，在更新您的个人资料时出错。"
       current password:                         "当前密码"
       new password:                             "新的密码"
       confirm password:                         "确认密码"
       avatar file:                              "选择一个文件作为您的头像"
       avatar help:                              "图片可以是JPG，PNG，或GIF格式。您的图片会转换成48x48的缩略图。图片文件的最大尺寸是1MB。"
+      picture error:                            "Sorry, there was an error updating your picture."
+      picture_too_large:                        "Picture should be less than 1 megabyte"
+      picture_invalid_type:                     "Picture should be JPG, PNG, or GIF"
       updated picture:                          "您的头像已成功更新！"
       updated notifications:                    "您的通知设置已成功更新！"
       notification errors:                      "以下错误导致无法更新您的通知："
@@ -367,12 +371,13 @@ zh-CN:
       newsletter:                               "通知我有关YouVersion的公告。"
       note_like:                                "当有人喜欢我的笔记请通知我。"
       reading_plans:                            "如果有关于我已开始的读经计划的信息，请通知我。"
-      publishing partners:                      "Keep me updated on news from YouVersion's content partners."
+      publishing partners:                      "YouVersion的内容提供商有新的信息时及时通知我。"
       update:                                   "更新通知"
   bookmarks:
     edit:                                       "编辑"
     delete:                                     "删除书签"
     title field:                                "标题"
+    title field field:                          "标题："
     labels:                                     "标签"
     all:                                        "所有笔记"
     labels label:                               "标签："
@@ -385,6 +390,12 @@ zh-CN:
     save:                                       "保存书签"
     confirm delete:                             "是的，我确定。"
     loading:                                    "正在载入您的书签..."
+    edit bookmark:                              "编辑书签"
+    reference:                                  "Reference:"
+    labels comma separated:                     "Labels (comma-separated):"
+    update:                                     "更新"
+    color:                                      "Color:"
+    version field:                              "Version:"
   badges:
     earned a badge:                             "赢得了一个徽章"
     user badges:                                "%{user}的徽章"
@@ -398,7 +409,7 @@ zh-CN:
     all plans:                                  "全部读经计划"
     all category plans:                         "所有%{category}类读经计划"
     my plans:                                   "我的读经计划"
-    none found:                                 "无法找到匹配您的要求的计划。请扩大您的搜索标准再试。"
+    none found:                                 "无法找到匹配您的要求的计划。请扩大您的搜索范围再试。"
     about publisher:                            "关于出版者"
     overview:                                   "计划概览"
     start:                                      "开始该计划"
@@ -524,10 +535,10 @@ zh-CN:
     donate now button:                          "现在就捐赠"
     email header:                               "YouVersion，LifeChurch.tv 的一个事工，已经收到了您的捐赠。除了信仰上无形的好处，您的捐赠没有任何的产品或者服务作为交换。若有问题请联系 giving@lifechurch.tv。"
     email footer:                               "您的捐赠会帮助全世界所有热爱神话语的人。"
-    address:                                    "Address"
-    city:                                       "City"
-    state:                                      "State"
-    zip:                                        "Zip"
+    address:                                    "地址"
+    city:                                       "城市"
+    state:                                      "州/省"
+    zip:                                        "邮编"
   download ad:
     title:                                      "免费下载圣经软件"
     line 1:                                     "几百种不同版本的选择"
@@ -542,9 +553,7 @@ zh-CN:
     youversion copy:                            "自从1996年开始，LifeChurch.tv 就致力于带领人们成为基督的虔诚跟随者。因此，我们一直在寻找一些新的方法来帮助人们在每日的生活中都与圣经连结。在过去的几年中，通过吸收不同的技术和策略我们的方法在不断的改变。但是我们的核心，我们的焦点却一直是努力阐释和教导人们上帝的话语是如何与每个人关联的，不管他们处于人生的哪个阶段。"
     youversion copy 2:                          "YouVersion 代表 LifeChurch.tv 事工的一个新领域。我们不只是用一些创新技术建立一个影响世界的工具，更重要的，我们让那些发现圣经与他们的生活有相关性的人们与神建立关系。"
     partners title:                             "鸣谢我们的合作伙伴"
-    partners text:                              "Without our generous Bible publishing partners, YouVersion simply would not be able to provide our worldwide community with so many Bibles. Many of you have asked how you can thank these vital supporters of YouVersion's mission. You can learn more about them, their ministries, and ways you can support them through the links below."
     translation title:                          "我们的翻译团队"
-    learn more:                                 "Learn More"
   press page:
     title:                                      "新闻区"
     contact header:                             "新闻联系信息"
@@ -554,9 +563,12 @@ zh-CN:
     blog:                                       "YouVersion 博客消息"
     facebook:                                   "YouVersion 的 Facebook 页面"
     twitter:                                    "YouVersion 的 Twitter 页面"
+    support:                                    "Need help with YouVersion?"
     lead copy:                                  "以网络圣经 YouVersion.com 为基础，圣经软件是一个免费的可以被安装在几乎所有手提电话的电子圣经。圣经软件允许读者阅读圣经，在他们的社交网络上保存经文，标识他们喜欢的段落，除此之外&mdash; 所有这些都与他们日益增长的生活方式相符合。"
     resources title:                            "新闻资源"
+    now title:                                  "今日的 YouVersion 社区"
     resources:
+      now:                                      "A live look at engagement and the latest data"
       about:                                    "关于 YouVersion 和圣经软件"
       history:                                  "YouVersion 历史和统计"
       manual:                                   "YouVersion 手册"
@@ -569,6 +581,8 @@ zh-CN:
       ipad:                                     "图片集：iPad"
       android:                                  "图片集：安卓"
       blackberry:                               "图片集：黑莓"
+      win phone 7:                              "Image Collection: Windows Phone 7"
+      windows 8:                                "Image Collection: Windows 8"
       lifestyle:                                "图片集：生活方式"
       screencast:                               "YouVersion 截屏"
     links title:                                "媒体报道的链接"
